--- a/style.css
+++ b/style.css
@@ -258,3 +258,55 @@ border: none;
     justify-content: center;
     gap: 20px;
 }
+
+
+
+.footer-main{
+    display: flex;
+    background-color: rgb(150, 148, 148);
+    padding: 30px;
+    justify-content: space-around;
+    margin-top: 20px;
+}
+
+.footer-img{
+    width: 180px;
+    
+}
+
+.foter h3{
+
+}
+.foter p{
+margin-top: 10px;
+}
+
+.foter-icon img{
+    margin-top: 10px;
+    width: 25px;
+    
+    
+}
+.b{
+    margin-left: 20px;
+}
+.c{
+    margin-left: 20px;
+}
+
+
+.fa-phone{
+    transform: rotate(110deg);
+   
+    margin-right: 5px;
+
+}
+.fa-envelope{
+  
+   
+    margin-right: 5px;
+
+}
+.fa-light{
+    margin-right: 5px;
+}
